frontend/homepage/k8/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
spec:
  replicas: 2
  selector:
    matchLabels:
      app: homepage
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: homepage
        team: frontend
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - image: insightio/frontend-homepage
          name: homepage
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
          resources:
            requests:
              cpu: 50m
              memory: 200Mi
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 60
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 10
          volumeMounts:
            - name: homepage-config
              mountPath: /usr/app/.env.production
              subPath: .env.production
              readOnly: true
      volumes:
        - name: homepage-config
          configMap:
            name: homepage-config
