frontend/homepage/k8/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homepage
spec:
  type: ClusterIP
  selector:
    app: homepage
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
